--- a/Arex388.OpenWeatherMap.csproj
+++ b/Arex388.OpenWeatherMap.csproj
@@ -6,6 +6,7 @@
     <PackageProjectUrl>https://github.com/arex388/Arex388.OpenWeatherMap</PackageProjectUrl>
     <RepositoryUrl>https://github.com/arex388/Arex388.OpenWeatherMap</RepositoryUrl>
     <PackageTags>openweathermap arex388</PackageTags>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
